[gd_scene load_steps=7 format=3 uid="uid://me7so7q3ljtk"]

[ext_resource type="Script" uid="uid://v1o7goa8ex4u" path="res://items/laser_gun_item.gd" id="1_2prxe"]
[ext_resource type="Texture2D" uid="uid://b2p6l8ifg3cyk" path="res://items/laser_gun_item.svg" id="1_40mt0"]

[sub_resource type="Animation" id="Animation_gjbqt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(42, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_uwjoc"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(42, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_d4j8t"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.433333),
"transitions": PackedFloat32Array(1, 0.68302, 1),
"update": 0,
"values": [Vector2(42, 12), Vector2(-8, 0), Vector2(42, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 2.21914, 1.93187, 1),
"update": 0,
"values": [0.0, -0.905826, 0.113446, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3u4d"]
_data = {
&"RESET": SubResource("Animation_gjbqt"),
&"idle": SubResource("Animation_uwjoc"),
&"shoot": SubResource("Animation_d4j8t")
}

[node name="LaserGunItem" type="Node2D"]
script = ExtResource("1_2prxe")

[node name="LaserGun" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="LaserGun"]
position = Vector2(42, 12)
scale = Vector2(0.625, 0.625)
texture = ExtResource("1_40mt0")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.888
one_shot = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Animations" type="AnimationPlayer" parent="."]
root_node = NodePath("../LaserGun/Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_u3u4d")
}
